# leti_library_qt

./: .gitignore  CMakeLists.txt  README.md  leti_library_qt.pro  main.cpp
src/: database.cpp  database.h  mainwindow.cpp  mainwindow.h  reader_dialog.cpp  reader_dialog.h
ui/: mainwindow.ui  reader_dialog.ui
